grammar.js
    file: ($) => repeat($._toplevel_statement),

    _toplevel_statement: ($) => choice($.statement, $.clause),

    // =================================================================
    // Literals
    // =================================================================

    _literal: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.true,
        $.false,
        $.none,
        $.default_val,
        $.character_literal,
        $._string_literal,
      ),

    integer_literal: (_) => token(seq(DIGITS)),

    float_literal: (_) =>
      token(
        choice(
          seq(DECIMAL_DIGITS, ".", DECIMAL_DIGITS, optional(/[fFdD]/)),
          seq(".", DECIMAL_DIGITS, optional(/[fFdD]/)),
        ),
      ),

    true: (_) => "true",
    false: (_) => "false",
    default_val: (_) => "_",

    character_literal: (_) =>
      token(seq("'", choice(/[^\\'\n]/, /\\./, /\\\n/), "'")),

    _string_literal: ($) =>
      choice($.string_literal, $.interpolated_string_literal),

    interpolated_string_literal: ($) =>
      seq(
        '$"',
        repeat(
          choice($.string_fragment, $.string_interpolation, $.escape_sequence),
        ),
        '"',
      ),

    string_literal: ($) =>
      seq('"', repeat(choice($.string_fragment, $.escape_sequence)), '"'),

    string_fragment: (_) => token.immediate(prec(1, /[^"\\{}]+/)),

    string_interpolation: ($) =>
      field("interpolation", seq("{", $.expression, "}")),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.expression)),
          field("operator", choice("=", "+=", "-=", "*=", "/=")),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["or", PREC.OR],
          ["and", PREC.AND],
          ["!=", PREC.EQUALITY],
          ["==", PREC.EQUALITY],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          [">", PREC.REL],
          ["<", PREC.REL],
          ["-", PREC.ADD],
          ["+", PREC.ADD],
          ["/", PREC.MULT],
          ["*", PREC.MULT],
          ["%", PREC.MULT],
          ["**", PREC.POW],
          ["??", PREC.DEFAULT_OP],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      choice(
        ...[
          ["+", PREC.UNARY],
          ["-", PREC.UNARY],
          ["not", PREC.UNARY],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              // @ts-ignore
              field("operator", operator),
              field("operand", $.expression),
            ),
          ),
        ),
      ),

    member_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field("object", $.expression),
          choice(".", "?."),
          field("property", choice($.identifier, $.parenthesized_expression)),
        ),
      ),

    subscript_expression: ($) =>
      prec(
        PREC.ARRAY,
        seq(field("object", $.expression), $.array_rank_specifier),
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("name", choice($.expression)),
          field("arguments", $.argument_list),
        ),
      ),

    parenthesized_expression: ($) =>
      seq("(", sep1(choice($.expression, $._unannotated_type), ","), ")"),

    switch_expression: ($) =>
      seq(
        "switch",
        sep1(field("subject", $.expression), ","),
        ":",
        field("body", alias($.switch_block, $.block)),
      ),

    // =================================================================
    // Blocks
    // =================================================================

    switch_rule: ($) =>
      prec(
        1,
        seq(
          choice($.identifier, $._literal),
          choice("->", ":"),
          choice($.expression_statement, $._suite, $.throw_statement),
        ),
      ),

    block: ($) => seq(repeat($.statement), $._dedent),

    // =================================================================
    // Clauses
    // =================================================================

    clause: ($) => choice($.use_clause),

    use_clause: ($) => seq("use", choice($._name, $._string_literal)),

    // =================================================================
    // Statements
    // =================================================================

    break_statement: ($) => seq("break", ";"),

    return_statement: ($) => seq("return", $.expression, ";"),

    expression_statement: ($) => seq($.expression, ";"),

    throw_statement: ($) => seq("throw", $.expression),

    // =================================================================
    // Compound Statements
    // =================================================================

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.expression),
          ":",
          field("consequence", $._suite),
          repeat(field("alternative", $.else_if_clause)),
          optional(field("alternative", $.else_clause)),
        ),
      ),

    else_if_clause: ($) =>
      seq(
        "else if",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite),
      ),

    else_clause: ($) => seq("else", ":", field("body", $._suite)),

    do_statement: ($) =>
      seq(
        "do",
        ":",
        field("body", $._suite),
        "while",
        field("condition", $.expression),
        ";",
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.expression),
        ":",
        field("body", $._suite),
      ),

    enhanced_for_statement: ($) =>
      seq(
        "for",
        field("initializer", $.enhanced_for_initializer),
        "in",
        field("value", $.expression),
        ":",
        field("body", $._suite),
      ),

    catch_statement: ($) =>
      seq(
        $.call_expression,
        "catch",
        $.parenthesized_expression,
        ":",
        field("body", $._suite),
      ),

    // =================================================================
    // Annotations
    // =================================================================

    variable_declaration: ($) =>
      seq(
        optional("mut"),
        field(
          "declarator",
          choice($.typed_variable_declarator, $.inferred_variable_declarator),
        ),
      ),

    typed_variable_declarator: ($) =>
      seq(
        field("type", $._unannotated_type),
        $._variable_declarator_id,
        optional(seq("=", field("value", $._variable_initializer))),
      ),

    _variable_declarator_id: ($) =>
      field("name", choice($.identifier, $.default_val)),

    _variable_initializer: ($) => $.expression,

    test_declaration: ($) =>
      seq(
        optional($.annotation),
        "test",
        field("name", $._string_literal),
        ":",
        field("body", $._suite),
      ),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),
    array_rank_specifier: ($) =>
      seq("[", sep(field("rank", optional($.expression)), ","), "]"),

    integral_type: ($) =>
      choice(
        "bool8",
        "u8",
        "u8x2",
        "u8x3",
        "u8x4",
        "u8x8",
        "u32",
        "u32x2",
        "u32x3",
        "u32x4",
        "u32x8",
        "u64",
        "u64x2",
        "u64x3",
        "u64x4",
        "i32",
        "i64",
        "i32x2",
        "i32x3",
        "i32x4",
        "i32x8",
        "i64x2",
        "i64x3",
        "i64x4",
      ),

    floating_point_type: ($) =>
      choice(
        "f32",
        "f32x2",
        "f32x3",
        "f32x4",
        "f32x8",
        "f64",
        "f64x2",
        "f64x3",
        "f64x4",
      ),

    bool_type: (_) => "bool",
    str_type: (_) => "str",

    // =================================================================
    // Inline
    // =================================================================

    _name: ($) => choice($.identifier),

    // =================================================================
    // Identifier
    // =================================================================

    // https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-IdentifierChars
    identifier: (_) => /[\p{XID_Start}_$][\p{XID_Continue}_$]*/u,

    // =================================================================
    // Util
    // =================================================================

    argument_list: ($) =>
      seq("(", sep(field("argument", $.expression), ","), ")"),

    _suite: ($) =>
      choice(
        alias($._simple_statement, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    block_comment: (_) => token(seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),
  },
});

/**
 * Creates a rule to match one or more occurences of `rule` separated by `seperator`
 *
 * @param {RuleOrLiteral} rule
 * @param {RuleOrLiteral} seperator
 * @returns {SeqRule}
 */
function sep1(rule, seperator) {
  return seq(rule, repeat(seq(seperator, rule)));
}

/**
 * Creates a rule to match zero or more occurences of `rule` separated by `seperator`
 *
 * @param {RuleOrLiteral} rule
 * @param {RuleOrLiteral} seperator
 * @returns {ChoiceRule}
 */
function sep(rule, seperator) {
  return optional(sep1(rule, seperator));
}
