test/corpus/primitives.txt
=================================================================================
flintc primitives.ft
=================================================================================

use Core.assert

/*
 * This file contains all possibilities for declaring primitive types
 * It contains all primitive types currently supported in Flint
 */

test "0. Declare booleans":
	bool b1 = true;
	bool b2 = false;

test "1. Declare bitset":
	bool8 b8 = u8(10);
	assert(not b8.$0);
	assert(b8.$1);
	assert(not b8.$2);
	assert(b8.$3);
	assert(not b8.$4);
	assert(not b8.$5);
	assert(not b8.$6);
	assert(not b8.$7);
	assert(str(b8) == "00001010");

test "2. Declare integers":
	i32 i1 = 0;
	i64 i2 = -10_923;
	u32 u3 = 442;
	u64 u4 = 1_545_533_0_0_0;

test "3. Declare floats":
	f32 f1 = 1.2;
	f64 f2 = -4_323.234_091;

test "4. Declare chars":
	u8 u1 = 0;
	u8 u2 = 'A';

test "5. Declare strings":
	str s1 = "";
	str s2 = "Hello, there!";
	u64 strlen = s2.length;
	strlen = s2.len;

test "6. Declare u8xN vectors":
	u8x2 v2c = u8x2(1, 2);
	u8x3 v3c = u8x3(1, 2, 3);
	u8x4 v4c = u8x4(1, 2, 3, 4);
	u8x8 v8c = u8x8(1, 2, 3, 4, 5, 6, 7, 8);

test "7. Declare i32xN vectors":
	i32x2 v2i = (10, 20);
	i32x3 v3i = (10, 20, 30);
	i32x4 v4i = (10, 20, 30, 40);
	i32x8 v8i = (10, 20, 30, 40, 50, 60, 70, 80);

test "8. Declare i64xN vectors":
	i64x2 v2l = (100, 200);
	i64x3 v3l = (100, 200, 300);
	i64x4 v4l = (100, 200, 300, 400);

test "9. Declare f32xN vectors":
	f32x2 v2f = (10.0, 20.0);
	f32x3 v3f = (10.0, 20.0, 30.0);
	f32x4 v4f = (10.0, 20.0, 30.0, 40.0);
	f32x8 v8f = (10.0, 20.0, 30.0, 40.0, 50.0, 60.0, 70.0, 80.0);

test "10. Declare f64xN vectors":
	f64x2 v2d = (100.0, 200.0);
	f64x3 v3d = (100.0, 200.0, 300.0);
	f64x4 v4d = (100.0, 200.0, 300.0, 400.0);

---

(file
  (clause
    (use_clause
      (scoped_identifier
        (identifier)
        (identifier))))
  (block_comment)
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (bool_type)
          (identifier)
          (true)))
      (variable_declaration
        (typed_variable_declarator
          (bool_type)
          (identifier)
          (false)))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (call_expression
            (integral_type)
            (argument_list
              (integer_literal)))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (unary_expression
              (field_access
                (identifier)
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (field_access
              (identifier)
              (identifier)))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (unary_expression
              (field_access
                (identifier)
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (field_access
              (identifier)
              (identifier)))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (unary_expression
              (field_access
                (identifier)
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (unary_expression
              (field_access
                (identifier)
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (unary_expression
              (field_access
                (identifier)
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (unary_expression
              (field_access
                (identifier)
                (identifier))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (binary_expression
              (call_expression
                (str_type)
                (argument_list
                  (identifier)))
              (string_literal
                (string_fragment))))))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (integer_literal)))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (unary_expression
            (integer_literal))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (integer_literal)))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (integer_literal)))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (float_literal)))
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (unary_expression
            (float_literal))))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (integer_literal)))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (character_literal)))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (str_type)
          (identifier)
          (string_literal)))
      (variable_declaration
        (typed_variable_declarator
          (str_type)
          (identifier)
          (string_literal
            (string_fragment))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (field_access
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (field_access
            (identifier)
            (identifier))))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (call_expression
            (integral_type)
            (argument_list
              (integer_literal)
              (integer_literal)))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (call_expression
            (integral_type)
            (argument_list
              (integer_literal)
              (integer_literal)
              (integer_literal)))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (call_expression
            (integral_type)
            (argument_list
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal)))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (call_expression
            (integral_type)
            (argument_list
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal)))))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (group_expression
            (integer_literal)
            (integer_literal))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (group_expression
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (group_expression
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (group_expression
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal))))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (group_expression
            (integer_literal)
            (integer_literal))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (group_expression
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (variable_declaration
        (typed_variable_declarator
          (integral_type)
          (identifier)
          (group_expression
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal))))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (group_expression
            (float_literal)
            (float_literal))))
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (group_expression
            (float_literal)
            (float_literal)
            (float_literal))))
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (group_expression
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal))))
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (group_expression
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal))))))
  (test_declaration
    (string_literal
      (string_fragment))
    (block
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (group_expression
            (float_literal)
            (float_literal))))
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (group_expression
            (float_literal)
            (float_literal)
            (float_literal))))
      (variable_declaration
        (typed_variable_declarator
          (floating_point_type)
          (identifier)
          (group_expression
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)))))))
