test/corpus/statements.txt
=================================================================================
break statement
=================================================================================

break;

---

(file
  (break_statement))

=================================================================================
expression statement
=================================================================================

arr[3];

---

(file
  (expression_statement
    (subscript_expression
      (identifier)
      (array_rank_specifier
        (integer_literal)))))

=================================================================================
throw statement
=================================================================================

throw x;

---

(file
  (throw_statement
    (identifier)))

=================================================================================
if statement
=================================================================================

if x:
    y;

if a:
    b;
else if c:
    d;
else:
    e;

---

(file
  (if_statement
    (identifier)
    (block
      (expression_statement
        (identifier))))
  (if_statement
    (identifier)
    (block
      (expression_statement
        (identifier)))
    (else_if_clause
      (identifier)
      (block
        (expression_statement
          (identifier))))
    (else_clause
      (block
        (expression_statement
          (identifier))))))

=================================================================================
do statement
=================================================================================

do:
    x;
while y;

---

(file
  (do_statement
    (block
      (expression_statement
        (identifier)))
    (identifier)))

=================================================================================
while statement
=================================================================================

while x:
    y;
    z;

---

(file
  (while_statement
    (identifier)
    (block
      (expression_statement
        (identifier))
      (expression_statement
        (identifier)))))

=================================================================================
enhanced for statement
=================================================================================

for i in iterable:
    x;

for (i, _) in iterable:
    x;
    y;

for (i, idx) in iterable:
    print($"i is {i} at index {idx}");

---

(file
  (enhanced_for_statement
    (identifier)
    (identifier)
    (block
      (expression_statement
        (identifier))))
  (enhanced_for_statement
    (parenthesized_expression
      (identifier)
      (default_val))
    (identifier)
    (block
      (expression_statement
        (identifier))
      (expression_statement
        (identifier))))
  (enhanced_for_statement
    (parenthesized_expression
      (identifier)
      (type_identifier))
    (identifier)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (interpolated_string_literal
              (string_fragment)
              (string_interpolation
                (identifier))
              (string_fragment)
              (string_interpolation
                (identifier)))))))))

=================================================================================
group assignment
=================================================================================

(a, b) = expr;

---

(file
  (expression_statement
    (assignment_expression
      (parenthesized_expression
        (identifier)
        (type_identifier))
      (identifier))))

=================================================================================
catch statement
=================================================================================

fn.call() catch(e):
    e;

---

(file
  (catch_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list))
    (parenthesized_expression
      (identifier))
    (block
      (expression_statement
        (identifier)))))

=================================================================================
array assignment
=================================================================================

arr[expr] = expr;

---

(file
  (expression_statement
    (assignment_expression
      (subscript_expression
        (identifier)
        (array_rank_specifier
          (identifier)))
      (identifier))))

=================================================================================
function invocation
=================================================================================

print("Hello, World");

---

(file
  (expression_statement
    (call_expression
      (identifier)
      (argument_list
        (string_literal
          (string_fragment))))))

=================================================================================
data field assignment
=================================================================================

x.y = z;

---

(file
  (expression_statement
    (assignment_expression
      (member_expression
        (identifier)
        (identifier))
      (identifier))))

=================================================================================
grouped field assignment
=================================================================================

a.(b, c) = expr;

---

(file
  (expression_statement
    (assignment_expression
      (member_expression
        (identifier)
        (parenthesized_expression
          (identifier)
          (type_identifier)))
      (identifier))))

=================================================================================
return statement
=================================================================================

return x;

---

(file
  (return_statement
    (identifier)))

=================================================================================
stacked array assignment
=================================================================================

expr[2, 2] = 4;

---

(file
  (expression_statement
    (assignment_expression
      (subscript_expression
        (identifier)
        (array_rank_specifier
          (integer_literal)
          (integer_literal)))
      (integer_literal))))

=================================================================================
stacked group assignment
=================================================================================

a.(b, c) = d;

---

(file
  (expression_statement
    (assignment_expression
      (member_expression
        (identifier)
        (parenthesized_expression
          (identifier)
          (type_identifier)))
      (identifier))))

=================================================================================
switch statement
=================================================================================

switch e:
    a:
        x;
        break;
    b:
        y;
        break;

---

(file
  (switch_expression
    (identifier)
    (block
      (switch_rule
        (identifier)
        (block
          (expression_statement
            (identifier))
          (break_statement)))
      (switch_rule
        (identifier)
        (block
          (expression_statement
            (identifier))
          (break_statement))))))
